# SQLManager

./: .gitignore  README.md  pyproject.toml
FileManager/: FileManager.py  __init__.py
manager/: BaseManager.py  SQLManager.py  __init__.py
model/: BaseModel.py
repository/: BaseRepository.py
service/: Migration.py  ORMRegistrator.py  __init__.py
